--- a/Frontend/src/app/app-shop/view/business-account/business-account.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/business-account.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 
 <div class="container pt-5 pb-lg-4 mt-5 mb-sm-2">
   <!-- Breadcrumb-->
@@ -72,21 +72,21 @@
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
-              [routerLink]="'/shop/business_account/ba_monitor'"
+              [routerLink]="'/shop/header/business_account/ba_monitor'"
               (click)="breadCrumbTxt='Monitor'"
             ><i class="fi-tv opacity-60 me-2"></i>Monitor</a
             >
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
-              [routerLink]="'/shop/business_account/ba_manage'"
+              [routerLink]="'/shop/header/business_account/ba_manage'"
               (click)="breadCrumbTxt='Manage'"
             ><i class="fi-shop opacity-60 me-2"></i>Manage</a
             >
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
-              [routerLink]="'/shop/business_account/ba_order'"
+              [routerLink]="'/shop/header/business_account/ba_order'"
               (click)="breadCrumbTxt='Order'"
             ><i class="fi-shopping-bag opacity-60 me-2"></i>Order
               <span class="badge rounded-pill bg-primary">10</span>
@@ -94,14 +94,14 @@
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
-              [routerLink]="'/shop/business_account/ba_order_history'"
+              [routerLink]="'/shop/header/business_account/ba_order_history'"
               (click)="breadCrumbTxt='Order History'"
             ><i class="fi-clock opacity-60 me-2"></i>Order History</a
             >
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
-              [routerLink]="'/shop/business_account/ba_profile'"
+              [routerLink]="'/shop/header/business_account/ba_profile'"
               (click)="breadCrumbTxt='Profile'"
             ><i class="fi-user opacity-60 me-2"></i>Profile</a
             >
