--- a/Frontend/src/app/app-customer/view/search-result/search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/search-result.component.html
@@ -332,300 +332,8 @@
     </button>
   </div>
 </div>
-<!--Item side viewer-->
-<div class="offcanvas offcanvas-end" id="fi-item-viewer" style="width:50rem;">
-  <div class="offcanvas-header d-block border-bottom">
-    <div class="d-flex align-items-center justify-content-between">
-      <h2 class="h5 mb-0">Item Name xxxxxxxxxxxxxx</h2>
-      <button class="btn-close" type="button" data-bs-dismiss="offcanvas"></button>
-    </div>
 
-  </div>
-  <div class="offcanvas-body">
-    <!-- Tabs content-->
-    <div class="tab-content">
-      <!-- Item View-->
-      <div class="tab-pane fade show active" id="item-view" role="tabpanel">
-        <div class="row">
-          <div class="row g-2 g-md-3 gallery" data-thumbnails="true" style="min-width: 30rem;">
-            <div class="col-8"><a class="gallery-item rounded rounded-md-3"
-                                  href="../../../../../assets/img/catalog/01.jpg"
-                                  data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Kids bed&lt;/h6&gt;"><img
-              src="../../../../../assets/img/catalog/01.jpg" alt="Gallery thumbnail"></a></div>
-            <div class="col-4"><a class="gallery-item rounded rounded-md-3 mb-2 mb-md-3"
-                                  href="../../../../../assets/img/catalog/02.jpg"
-                                  data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Kids bed&lt;/h6&gt;"><img
-              src="../../../../../assets/img/catalog/02.jpg" alt="Gallery thumbnail"></a>
-              <a class="gallery-item rounded rounded-md-3" href="../../../../../assets/img/catalog/03.jpg"
-                 data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Working desk&lt;/h6&gt;"><img
-                src="../../../../../assets/img/catalog/03.jpg" alt="Gallery thumbnail"></a></div>
-            <div class="col-12">
-              <div class="row g-2 g-md-3">
-                <div class="col"><a class="gallery-item rounded-1 rounded-md-2"
-                                    href="../../../../../assets/img/catalog/03.jpg"
-                                    data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Working desk&lt;/h6&gt;"><img
-                  src="../../../../../assets/img/catalog/03.jpg" alt="Gallery thumbnail"></a></div>
-                <div class="col"><a class="gallery-item rounded-1 rounded-md-2"
-                                    href="../../../../../assets/img/catalog/04.jpg"
-                                    data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;King size bed&lt;/h6&gt;"><img
-                  src="../../../../../assets/img/catalog/04.jpg" alt="Gallery thumbnail"></a></div>
-                <div class="col"><a class="gallery-item rounded-1 rounded-md-2"
-                                    href="../../../../../assets/img/catalog/05.jpg"
-                                    data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Towels&lt;/h6&gt;"><img
-                  src="../../../../../assets/img/catalog/05.jpg" alt="Gallery thumbnail"></a></div>
-                <div class="col"><a class="gallery-item rounded-1 rounded-md-2"
-                                    href="../../../../../assets/img/catalog/06.jpg"
-                                    data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Bathroom&lt;/h6&gt;"><img
-                  src="../../../../../assets/img/catalog/06.jpg" alt="Gallery thumbnail"></a></div>
-                <div class="col"><a class="gallery-item more-item rounded-1 rounded-md-2"
-                                    href="../../../../../assets/img/catalog/07.jpg"
-                                    data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Bathroom&lt;/h6&gt;"><img
-                  src="../../../../../assets/img/catalog/07.jpg" alt="Gallery thumbnail"><span
-                  class="gallery-item-caption fs-base">+5 <span
-                  class='d-none d-md-inline'>photos</span></span></a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="rowg-3  mt-4">
-          <h3 class="h4 mb-4"><i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i>Information</h3>
-        </div>
-        <div class="row g-2">
-          <div class="col me-sm-1">
-            <div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">
-              <i class="fi-dashboard d-block h4 text-light mb-0 mx-center"></i>
-              <span class="fs-xs text-light fw-bold">1 Packet</span>
-            </div>
-          </div>
-          <div class="col me-sm-1">
-            <div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">
-              <i class="fi-precentage d-block h4 text-light mb-0 mx-center fw-bold"></i>
-              <span class="fs-xs text-light fw-bold">20%</span>
-            </div>
-          </div>
-          <div class="col">
-            <div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">
-              <i class="fi-cash d-block h4 text-light mb-0 mx-center"></i>
-              <span class="fs-xs text-light fw-bold">LKR 2000</span>
-            </div>
-          </div>
-        </div>
-        <div class="row cols-md-12 mt-3">
-          <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
-          <div class="col">
-            <p class="mb-2 fs-sm text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              consequuntur laudantium inventore dignissimos ipsum. Error sint perferendis dolores eligendi animi alias
-              excepturi aut aliquid, molestiae recusandae atque, quo iusto rem! </p>
-          </div>
-        </div>
-
-        <div class="row cols-md-12 mt-2">
-          <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> User Interface</span>
-          </div>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> Typography</span>
-          </div>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> User Experience</span>
-          </div>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> User Interface</span>
-          </div>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> Typography</span>
-          </div>
-          <div class="col-sm-6 col-md-4 col-xl-3">
-            <span
-              class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"><i
-              class="fi-info-square me-2"></i> User Experience</span>
-          </div>
-        </div>
-      </div>
-      <!--Item Review-->
-      <div class="tab-pane fade" id="item-review" role="tabpanel">
-        <div class="card card-body">
-          <!-- Reviews-->
-          <div class="mb-4 pb-4 border-bottom">
-            <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>4,9 (4 reviews)
-            </h3>
-            <div
-              class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
-              <a class="btn btn-outline-primary mb-sm-0 mb-3" href="#add-review" data-bs-toggle="collapse" role="button"
-                 aria-expanded="false" aria-controls="add-review"><i class="fi-edit me-1"></i>Add review</a>
-              <div class="d-flex align-items-center ms-sm-4">
-                <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i
-                  class="fi-arrows-sort text-muted mt-n1 me-2"></i>Sort by:</label>
-                <select class="form-select" id="reviews-sorting">
-                  <option>Newest</option>
-                  <option>Oldest</option>
-                  <option>Popular</option>
-                  <option>High rating</option>
-                  <option>Low rating</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <!--add Review-->
-          <div class="collapse mb-4 pb-4" id="add-review">
-            <div class="card card-body">
-              <form class="needs-validation" novalidate>
-                <div class="mb-3">
-                  <label class="form-label" for="review-rating">Rating <span class='text-danger'>*</span></label>
-                  <select class="form-control form-select" id="review-rating" required>
-                    <option value="" selected disabled hidden>Choose rating</option>
-                    <option value="5 stars">5 stars</option>
-                    <option value="4 stars">4 stars</option>
-                    <option value="3 stars">3 stars</option>
-                    <option value="2 stars">2 stars</option>
-                    <option value="1 star">1 star</option>
-                  </select>
-                  <div class="invalid-feedback">Please rate the property.</div>
-                </div>
-                <div class="mb-4">
-                  <label class="form-label" for="review-text">Review <span class='text-danger'>*</span></label>
-                  <textarea class="form-control" id="review-text" rows="5" placeholder="Your review message"
-                            required></textarea>
-                  <div class="invalid-feedback">Please write your review.</div>
-                </div>
-                <button class="btn btn-success d-block w-100 mb-4" type="submit">Submit a review</button>
-              </form>
-            </div>
-          </div>
-          <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                               src="../../../../../assets/img/37.png"
-                                                               width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Annette Black</h6><span class="star-rating"><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i></span>
-                </div>
-              </div>
-              <span class="text-muted fs-sm">Jan 17, 2021</span>
-            </div>
-            <p>Elementum ut quam tincidunt egestas vitae elit, hendrerit. Ullamcorper nulla amet lobortis elit, nibh
-              condimentum enim. Aliquam felis nisl tellus sodales lectus dictum tristique proin vitae. Odio fermentum
-              viverra tortor quis.</p>
-            <div class="d-flex align-items-center">
-              <button class="btn-like" type="button"><i class="fi-like"></i><span>(3)</span></button>
-              <div class="border-end me-1">&nbsp;</div>
-              <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(0)</span></button>
-            </div>
-          </div>
-          <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                               src="../../../../../assets/img/37.png"
-                                                               width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Darrell Steward</h6><span class="star-rating"><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star"></i><i
-                  class="star-rating-icon fi-star"></i></span>
-                </div>
-              </div>
-              <span class="text-muted fs-sm">Dec 1, 2020</span>
-            </div>
-            <p>Vel dictum nunc ut tristique. Egestas diam amet, ut proin hendrerit. Dui accumsan at phasellus tempus
-              consequat dignissim.</p>
-            <div class="d-flex align-items-center">
-              <button class="btn-like" type="button"><i class="fi-like"></i><span>(0)</span></button>
-              <div class="border-end me-1">&nbsp;</div>
-              <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(1)</span></button>
-            </div>
-          </div>
-          <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                               src="../../../../../assets/img/37.png"
-                                                               width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Floyd Miles</h6><span class="star-rating"><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i></span>
-                </div>
-              </div>
-              <span class="text-muted fs-sm">Oct  28, 2020</span>
-            </div>
-            <p>Viverra nunc blandit sapien non imperdiet sit. Purus tempus elementum aliquam eu urna. A aenean duis non
-              egestas at libero porttitor integer eget. Sed dictum lobortis laoreet gravida.</p>
-            <div class="d-flex align-items-center">
-              <button class="btn-like" type="button"><i class="fi-like"></i><span>(2)</span></button>
-              <div class="border-end me-1">&nbsp;</div>
-              <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(1)</span></button>
-            </div>
-          </div>
-          <!-- Review-->
-          <div class="mb-4 pb-4 border-bottom">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                               src="../../../../../assets/img/37.png"
-                                                               width="48" alt="Avatar">
-                <div class="ps-2">
-                  <h6 class="fs-base mb-0">Ralph Edwards</h6><span class="star-rating"><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i
-                  class="star-rating-icon fi-star-filled active"></i><i class="star-rating-icon fi-star"></i></span>
-                </div>
-              </div>
-              <span class="text-muted fs-sm">Sep 14, 2020</span>
-            </div>
-            <p>Elementum nisl, egestas nam consectetur nisl, at pellentesque cras. Non sed ac vivamus dolor dignissim
-              ut. Nisl sapien blandit pulvinar sagittis donec sociis ipsum arcu est. Tempus, rutrum morbi scelerisque
-              tempor mi. Etiam urna, cras bibendum leo nec faucibus velit. Tempor lectus dignissim at auctor integer
-              neque quam amet.</p>
-            <div class="d-flex align-items-center">
-              <button class="btn-like" type="button"><i class="fi-like"></i><span>(0)</span></button>
-              <div class="border-end me-1">&nbsp;</div>
-              <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(0)</span></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="offcanvas-footer border-top" style="display: block;">
-    <ul class="nav nav-tabs justify-content-end" role="tablist">
-      <li class="nav-item me-2">
-        <button class="btn btn-icon btn-success btn-lg text-light shadow-sm rounded-circle" type="button"
-                data-bs-toggle="tooltip" title="Add to Cart">
-          <i class="fi-cart"></i></button>
-      </li>
-      <li class="nav-item me-2">
-        <a class="btn btn-md btn-outline-info" href="#item-view" data-bs-toggle="tab" role="tab"><i
-          class="fi-arrow-back fs-lg me-2"></i>Back</a>
-      </li>
-      <li class="nav-item me-2">
-        <a class="btn btn-md btn-outline-primary" href="#item-review" data-bs-toggle="tab" role="tab"><i
-          class="fi-star fs-lg me-2"></i>Reviews</a>
-      </li>
-    </ul>
-  </div>
-</div>
+<app-item-search-result-view></app-item-search-result-view>
 
 <main class="page-wrapper">
 
